Remove unused lifetime from `IntoWasmClosureRef*`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,6 +73,7 @@ unexpected_cfgs = { level = "warn", check-cfg = [
   'cfg(wasm_bindgen_unstable_test_coverage)',
   'cfg(xxx_debug_only_print_generated_code)',
 ] }
+unused_lifetimes = "warn"
 
 [workspace.lints.clippy]
 large_enum_variant = "allow"
